--- a/index.html
+++ b/index.html
@@ -42,7 +42,21 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.3.0",
     "jszip": "https://esm.sh/jszip@^3.10.1",
-    "xlsx": "https://esm.sh/xlsx@^0.18.5"
+    "xlsx": "https://esm.sh/xlsx@^0.18.5",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "dotenv/": "https://esm.sh/dotenv@^17.2.3/",
+    "groq-sdk": "https://esm.sh/groq-sdk@^0.37.0",
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "path": "https://esm.sh/path@^0.12.7",
+    "express": "https://esm.sh/express@^5.2.1",
+    "sqlite3": "https://esm.sh/sqlite3@^5.1.7",
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "qrcode": "https://esm.sh/qrcode@^1.5.4",
+    "url": "https://esm.sh/url@^0.11.4",
+    "uuid": "https://esm.sh/uuid@^13.0.0",
+    "multer": "https://esm.sh/multer@^2.0.2",
+    "module": "https://esm.sh/module@^2.0.0",
+    "whatsapp-web.js": "https://esm.sh/whatsapp-web.js@^1.34.2"
   }
 }
 </script>
