feat: Integrate Nodemailer for email functionality
This commit introduces Nodemailer integration to the Contábil Manager Pro application. This enables the system to send emails, complementing existing WhatsApp communication features.

Key changes include:
- Adding `nodemailer` as a dependency in `package.json`.
- Updating `index.html` to include the Nodemailer CDN.
- Modifying `server.js` to set up a Nodemailer transporter.
- Enhancing `BulkSend.tsx` and `Send.tsx` to incorporate email sending options and user interface elements for email configuration.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     "uuid": "https://esm.sh/uuid@^13.0.0",
     "multer": "https://esm.sh/multer@^2.0.2",
     "module": "https://esm.sh/module@^2.0.0",
-    "whatsapp-web.js": "https://esm.sh/whatsapp-web.js@^1.34.2"
+    "whatsapp-web.js": "https://esm.sh/whatsapp-web.js@^1.34.2",
+    "nodemailer": "https://esm.sh/nodemailer@^7.0.12"
   }
 }
 </script>
