feat: Add PDF text extraction and improve document processing
Introduces PDF text extraction capabilities to the document processing module. This change enables the application to read text content directly from PDF files, enhancing the accuracy of category and company identification.

Additionally, updates the document processing logic to leverage the extracted PDF text along with the filename for more robust identification.

Minor updates include adding a new holiday for "Consciência Negra" and adjusting FGTS/INSS payment due dates for more accurate financial calculations. The Dockerfile has been significantly simplified by removing the multi-stage build and only including necessary dependencies for the production environment.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     "multer": "https://esm.sh/multer@^2.0.2",
     "module": "https://esm.sh/module@^2.0.0",
     "whatsapp-web.js": "https://esm.sh/whatsapp-web.js@^1.34.2",
-    "nodemailer": "https://esm.sh/nodemailer@^7.0.12"
+    "nodemailer": "https://esm.sh/nodemailer@^7.0.12",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@3.11.174",
+    "pdfjs-dist/build/pdf.worker.min.mjs": "https://esm.sh/pdfjs-dist@3.11.174/build/pdf.worker.min.mjs"
   }
 }
 </script>
