--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contábil Manager Pro</title>
+    <!-- Tailwind via CDN mantido pois não há index.css no projeto -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
@@ -35,31 +36,28 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "jszip": "https://esm.sh/jszip@^3.10.1",
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "xlsx": "https://esm.sh/xlsx@^0.18.5",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "jszip": "https://esm.sh/jszip@^3.10.1",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@^5.4.530",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "dotenv/": "https://esm.sh/dotenv@^17.2.3/",
-    "groq-sdk": "https://esm.sh/groq-sdk@^0.37.0",
-    "cors": "https://esm.sh/cors@^2.8.5",
-    "path": "https://esm.sh/path@^0.12.7",
     "express": "https://esm.sh/express@^5.2.1",
-    "sqlite3": "https://esm.sh/sqlite3@^5.1.7",
-    "fs": "https://esm.sh/fs@^0.0.1-security",
-    "qrcode": "https://esm.sh/qrcode@^1.5.4",
-    "url": "https://esm.sh/url@^0.11.4",
-    "uuid": "https://esm.sh/uuid@^13.0.0",
-    "multer": "https://esm.sh/multer@^2.0.2",
     "module": "https://esm.sh/module@^2.0.0",
-    "whatsapp-web.js": "https://esm.sh/whatsapp-web.js@^1.34.2",
+    "path": "https://esm.sh/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4",
+    "cors": "https://esm.sh/cors@^2.8.6",
+    "whatsapp-web.js": "https://esm.sh/whatsapp-web.js@^1.34.4",
+    "qrcode": "https://esm.sh/qrcode@^1.5.4",
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "sqlite3": "https://esm.sh/sqlite3@^5.1.7",
+    "multer": "https://esm.sh/multer@^2.0.2",
     "nodemailer": "https://esm.sh/nodemailer@^7.0.12",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@3.11.174",
-    "pdfjs-dist/build/pdf.worker.min.mjs": "https://esm.sh/pdfjs-dist@3.11.174/build/pdf.worker.min.mjs"
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0"
   }
 }
 </script>
