feat(email): Add email client integration
Integrates IMAP and Mailparser libraries to enable email client functionality. This includes adding new dependencies to package.json and index.html, and a new 'emailclient' route in App.tsx. The Sidebar component is updated to include a new navigation item for the email client.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     "sqlite3": "https://esm.sh/sqlite3@^5.1.7",
     "multer": "https://esm.sh/multer@^2.0.2",
     "nodemailer": "https://esm.sh/nodemailer@^7.0.12",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "imap-simple": "https://esm.sh/imap-simple@^5.1.0",
+    "mailparser": "https://esm.sh/mailparser@^3.9.3"
   }
 }
 </script>
